# learn-script

./: .gitignore  Makefile
.ai/grillen/: TST-001-qa.md  TST-001.md
.claude/: settings.json
.claude/hooks/: symlink-runtime-files.sh
app/: README.md  pubspec.yaml
app/lib/: main.dart  pocketbase_collections.dart  user_grade.dart
app/linux/: CMakeLists.txt
app/test/: quiz_leaf_progress_test.dart  widget_test.dart
app/web/: index.html  (+1 more)
backend/: .gitignore  README.md  docker-compose.yml
backend/agent-backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/agent-backend/scripts/: prune_quiz_stream_logs.py  rerun_all_captures_processing.py  trace_capture_agent.py
backend/agent-backend/src/script_agent/agents/: __init__.py  curriculum_unit_agent.py  subject_quiz_agent.py
backend/agent-backend/src/script_agent/api/: deps.py
backend/agent-backend/src/script_agent/api/routers/: quiz.py  rag.py
backend/agent-backend/src/script_agent/app/: factory.py
backend/agent-backend/src/script_agent/config/: settings.py
backend/agent-backend/src/script_agent/core/: collections.py  hierarchy.py  subject_slug.py
backend/agent-backend/src/script_agent/domain/: quiz_models.py
backend/agent-backend/src/script_agent/integrations/chroma/: routing.py  store.py
backend/agent-backend/src/script_agent/integrations/pocketbase/: client.py  models.py  print_pb_token.py
backend/agent-backend/src/script_agent/services/: quiz_pull_service.py  quiz_session_service.py  quiz_stream_log.py
backend/agent-backend/src/script_agent/workers/: jobs.py
(+52 files in other folders)
